--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-}
-
 .App-header {
   background-color: #ffffff;
   min-height: 100vh;
@@ -23,7 +20,7 @@
 }
 
 table {
-  padding: 15vh;
+  padding: 15vh 20vh;
 }
 
 .subtitle {
@@ -40,9 +37,62 @@ table {
 #circle {
   width: 70vh;
   height: 70vh;
-  background: #DDE0FF;
   border-radius: 50%;
-  -webkit-text-stroke-width: 4px;
-  -webkit-text-stroke-color: #F3F3F3;
-  margin: 5vh 5vh;
+  margin: 5vh 10vh;
+}
+
+.projects {
+  background-color: #EAFAFF;
+  padding: 10vh;
+}
+
+.project {
+  background: #ffffff;
+  padding: 3vh;
+  color: #BABABA;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 13px;
+  width: 40vh;
+  margin: 0vh;
+  
+}
+
+.project-name {
+  font-weight: lighter;
+  background-color: #7DC8C8;
+  color: white;
+  font-weight: normal;
+  padding: 0.5vh 1.5vh;
+  border-radius: 4px;
+
+}
+
+.project-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.more {
+border-radius: 50px;
+padding: 0vh 15vh;
+height: 5vh;
+color: #BDB8B8;
+border: #BDB8B8;
+font-size: 3vh;
+font-weight: bold;
+margin-bottom: 1vh;
+margin: 2vh;
+background-color: #E7F6F6;
+}
+
+.description {
+  color: black;
+  font-weight: bold;
+}
+
+.image {
+  height: auto;
+  max-width: 40vh;
+  border-style:hidden;
+  box-shadow: 0 0 12px 12px white inset;
 }
