--- a/src/App.css
+++ b/src/App.css
@@ -30,20 +30,20 @@
 }
 
 .top {
-  padding: 5vh 10vh;
+  padding: 0vh 10vw;
   display: flex;
   background-color: #FAFAFA;
   justify-content: space-between;
 }
 
 table {
-  padding: 0vh 10%;
-  padding-top: 15vh;
+  padding: 10vh 5vw;
+  padding-top: 20vh;
 }
 
 .subtitle {
   font-size: 4vh;
-  padding: 4vh 0vh;
+  padding: 4vh 0vw;
   font-weight: bold;
 }
 
@@ -56,7 +56,11 @@ table {
   float: inline-end;
   color: #EEEEFF;
   margin-top: 2vh;
-  margin-bottom: 0%;
+}
+
+.hima {
+  padding-top:15vh;
+  width: 30vw;
 }
 
 .section-heading {
@@ -67,10 +71,16 @@ table {
 }
 
 
-.projects {
+#projects {
   background: linear-gradient(to bottom, #EAFAFF, #d9e6fb);
-  padding: 10vh 30vh;
+  padding: 10vh 8vw;
   max-width: 100%;
+}
+
+.projects {
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .project-name:link,
@@ -87,11 +97,11 @@ a, a::after, a:link {
 
 .project {
   background: #FAFAFA;
-  padding: 3vh 4vh;
+  padding: 3vh 2vw;
   color: #bababa;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 13px;
-  width: 40vh;
+  max-width: 20vw;
   margin-bottom: 5vh;
   margin-left: auto;
   margin-right: auto;
@@ -102,7 +112,7 @@ a, a::after, a:link {
   background-color: #7DC8C8;
   color: white;
   font-weight: normal;
-  padding: 0.5vh 1.5vh;
+  padding: 0.5vh 0.8vw;
   border-radius: 4px;
 }
 
@@ -123,9 +133,8 @@ a, a::after, a:link {
 .button-div {
   background-color: #e7f6f6;
   border-radius: 50px;
-  padding: 1vh 10%;
+  padding: 1vh 5vw;
   text-align: center;
-  margin-bottom: 5%;
 }
 
 .description {
@@ -144,7 +153,7 @@ a, a::after, a:link {
 
 .image {
   height: auto;
-  max-width: 40vh;
+  max-width: 20vw;
   border-style: hidden;
   align-self: center;
   box-shadow: 0 0 12px 12px white inset;
@@ -159,12 +168,12 @@ a, a::after, a:link {
 
 .extra-curriculars {
   background: linear-gradient(to bottom, #d9e6fb, #FAFAFA);
-  padding: 0vh 15%;
+  padding: 0vh 15vw;
   max-width: 100%;
 }
 
 .ec {
-  padding: 3vh 4vh;
+  padding: 3vh 2vw;
   background-color: #FAFAFA;
   color: #bababa;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
@@ -182,7 +191,7 @@ a, a::after, a:link {
   background-color: #6e90c7;
   color: white;
   font-weight: normal;
-  padding: 0.5vh 1.5vh;
+  padding: 0.5vh 0.8vw;
   border-radius: 4px;
 }
 
@@ -196,10 +205,9 @@ a, a::after, a:link {
 
 .info {
   float: right;
-  margin-right: 5%;
+  margin-right: 2%;
   font-size: 2vw;
-  max-width: 60%;
-  overflow-wrap: break-word;
+  max-width: 41vw;
   width: auto;
-  margin-bottom: 1%;
 }
+
