--- a/src/styles/__projects.scss
+++ b/src/styles/__projects.scss
@@ -1,23 +1,3 @@
-.projects {
-  max-width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.project-section {
-  background: linear-gradient(to bottom, #eafaff, #d9e6fb);
-  padding: 10vh 8vw;
-  max-width: 100%;
-}
-
-.project-name:link,
-.project-name::after,
-.ec-name:link,
-.ec-name::after {
-  text-decoration: underline;
-  color: white;
-}
-
 .project {
   background: #fafafa;
   padding: 3vh 2vw;
@@ -28,56 +8,53 @@
   margin-bottom: 5vh;
   margin-left: auto;
   margin-right: auto;
-}
 
-.project-name {
-  font-weight: lighter;
-  background-color: #7dc8c8;
-  color: white;
-  font-weight: normal;
-  padding: 0.5vh 0.8vw;
-  border-radius: 4px;
-}
+  &__name {
+    font-weight: lighter;
+    background-color: #7dc8c8;
+    color: white;
+    font-weight: normal;
+    padding: 0.5vh 0.8vw;
+    border-radius: 4px;
+  }
 
-.project-list {
-  display: flex;
-  justify-content: space-between;
-}
+  &__name:link,
+  &__name::after {
+    text-decoration: underline;
+    color: white;
+  }
 
-.more {
-  color: hsl(0, 4%, 73%);
-  border: #bdb8b8;
-  font-size: 1.5vw;
-  font-weight: bold;
-  background-color: #e7f6f6;
-  border-radius: 50px;
-}
+  &__list {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.description {
-  font-weight: bold;
-  color: rgb(95, 95, 95);
-  font-size: 0.9vw;
-  margin-top: 0.6vh;
-}
+  &__description {
+    font-weight: bold;
+    color: rgb(95, 95, 95);
+    font-size: 0.9vw;
+    margin-top: 0.6vh;
+  }
 
-.gray-heading {
-  font-weight: normal;
-  font-size: 1vw;
-  color: rgb(133, 133, 133);
-  margin-bottom: 0;
-}
+  &__heading {
+    font-weight: normal;
+    font-size: 1vw;
+    color: rgb(133, 133, 133);
+    margin-bottom: 0;
+  }
 
-.image {
-  height: auto;
-  max-width: 20vw;
-  border-style: hidden;
-  align-self: center;
-  box-shadow: 0 0 12px 12px white inset;
-}
+  &__image {
+    height: auto;
+    max-width: 20vw;
+    border-style: hidden;
+    align-self: center;
+    box-shadow: 0 0 12px 12px white inset;
+  }
 
-.my-role {
-  color: rgb(95, 95, 95);
-  font-weight: bold;
-  margin-top: 0.6vh;
-  font-size: 0.9vw;
+  &__role {
+    color: rgb(95, 95, 95);
+    font-weight: bold;
+    margin-top: 0.6vh;
+    font-size: 0.9vw;
+  }
 }
