--- a/src/styles/__base.scss
+++ b/src/styles/__base.scss
@@ -25,7 +25,7 @@ a:link {
 
 .section-heading {
   padding-bottom: 3vh;
-  font-size: 2.5vw;
+  font-size: 4vh;
   color: slategray;
   transition: background-position 0.5s ease-out;
 }
@@ -39,7 +39,7 @@ a:link {
 .more {
   color: hsl(0, 4%, 73%);
   border: #bdb8b8;
-  font-size: 1.5vw;
+  font-size: 2vh;
   font-weight: bold;
   background-color: #e7f6f6;
   border-radius: 50px;
