--- a/src/styles/__top.scss
+++ b/src/styles/__top.scss
@@ -1,56 +1,69 @@
 /* HEADING STYLES */
 
 .top {
-    margin: 0vh 10vw;
-    display: flex;
-    overflow: hidden;
-    background-color: #fafafa;
-  
-    &__banner,
-    &__banner::after,
-    &__banner:link {
-      background-color: #ededed;
-      padding: 0.7vh;
-      font-size: 0.7vw;
-      text-align: center;
-      color: #82818e;
-      text-decoration: none;
-      font-weight: 600;
-    }
-  
-    &__title {
-      -webkit-text-stroke-width: 0.2vh;
-      -webkit-text-stroke-color: #87c2d5;
-      color: #e7f6f6;
-      font-size: 4vw;
-    }
-  
-    &__subtitle {
-      font-size: 2vw;
-      padding: 4vh 0vw;
-      font-weight: bold;
-    }
-  
-    &__intro {
-      font-size: 1.4vw;
-      margin-bottom: 4vh;
-    }
-  
-    &__button-div {
-      background-color: #e7f6f6;
-      border-radius: 50px;
-      padding: 1vh 5vw;
-      text-align: center;
-    }
-  
-    &__hima {
-      padding-top: 8vh;
-      width: 40vw;
-      margin: 0vw;
-    }
+  margin: 0vh 10vw;
+  display: flex;
+  overflow: hidden;
+  background-color: #fafafa;
+
+  &__banner,
+  &__banner::after,
+  &__banner:link {
+    background-color: #ededed;
+    padding: 0.7vh;
+    font-size: 1.2vh;
+    text-align: center;
+    color: #82818e;
+    text-decoration: none;
+    font-weight: 600;
   }
 
-  table {
-    padding: 10vh 5vw;
-    padding-top: 20vh;
+  &__title {
+    -webkit-text-stroke-width: 0.2vh;
+    -webkit-text-stroke-color: #87c2d5;
+    color: #e7f6f6;
+    font-size: 7vh;
   }
+
+  &__subtitle {
+    font-size: 3vh;
+    padding: 4vh 0vw;
+    font-weight: bold;
+  }
+
+  &__intro {
+    font-size: 2vh;
+    margin-bottom: 4vh;
+  }
+
+  &__button-div {
+    background-color: #e7f6f6;
+    border-radius: 50px;
+    padding: 1vh 5vw;
+    text-align: center;
+  }
+
+  &__hima {
+    padding-top: 8vh;
+    width: 40vw;
+    margin: 0vw;
+    height: auto;
+    @include respond(tab-port) {
+      display: none;
+    }
+    @include respond(tab-land) {
+      display: none;
+    }
+    @include respond(phone) {
+      display: none;
+    }
+    @include respond(ipad) {
+      display: none;
+    }
+  }
+}
+
+table {
+  padding: 10vh 5vw;
+  padding-top: 20vh;
+}
