new build with ec update

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './_extracurriculars';
 @import './_projects';
+@import './_experiences';
 @import './_mixins';
 @import './_bootstrap';
 @import './_top';
