--- a/src/styles/__experiences.scss
+++ b/src/styles/__experiences.scss
@@ -1,12 +1,4 @@
-@import "./_mixins";
-
-.extra-curriculars {
-  background: linear-gradient(to bottom, #d9e6fb, #fafafa);
-  padding: 0vh 8vw;
-  max-width: 100%;
-}
-
-.ec {
+.exp {
   padding: 3vh 2vw;
   background-color: #fafafa;
   color: #bababa;
@@ -21,36 +13,44 @@
 
   @include respond(tab-port) {
     min-width: 50vw;
-    min-height:60vh;
+    min-height: 60vh;
     align-items: center;
   }
   @include respond(tab-land) {
     min-width: 50vw;
-    min-height:60vh;
+    min-height: 60vh;
   }
   @include respond(ipad) {
     min-width: 50vw;
-    min-height:60vh;
+    min-height: 60vh;
     align-content: center;
   }
   @include respond(phone) {
     min-width: 70vw;
-    min-height:70vh;
+    min-height: 70vh;
   }
 
-  &__name {
+  &__job {
     background-color: #6e90c7;
     color: white;
     font-weight: normal;
     padding: 0.5vh 0.8vw;
     border-radius: 4px;
-    font-size: 2.3vh;
+  }
+  &__link {
+    font-size: 2vh;
   }
 
-  &__name:link,
-  &__name::after {
+  &__link:link,
+  &__link::after {
     text-decoration: underline;
     color: white;
+  }
+
+  &__subheading {
+    padding: 0vh 3vw;
+    float: right;
+    font-weight: lighter;
   }
 
   &__image {
@@ -88,7 +88,7 @@
       float: none;
       max-width: 65vw;
       margin-right: 0vw;
-      height:fit-content;
+      height: fit-content;
     }
     @include respond(tab-land) {
       float: right;
