--- a/src/styles/__base.scss
+++ b/src/styles/__base.scss
@@ -14,8 +14,9 @@ body {
   flex-direction: column;
   color: #747380;
   text-align: left;
-  margin-bottom: 0%;
+  justify-content: center;
   overflow: hidden;
+  margin: 0vh 12vw;
 }
 
 a,
